--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "sudoku-solver",
-  "version": "2.0.0",
-  "description": "Quality Assurance 4: Sudoku Solver",
+  "name": "fcc_qa_project4",
+  "version": "0.0.4",
+  "description": "FCC QA Project 4: Sudoku Solver",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
+    "start": "node server.js",
+    "dev": "RUN_MODE=development nodemon server.js",
+    "test": "mocha --timeout 5000 --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.11.5",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsdom": "^16.4.0",
-    "mocha": "^8.1.3",
-    "nodemon": "^2.0.4"
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/freeCodeCamp/boilerplate-project-sudoku-solver"
+  },
+  "keywords": [
+    "node",
+    "express"
+  ],
   "license": "MIT"
 }
